--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.10",
@@ -14,6 +15,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.10",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
