--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.10",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0"
@@ -31,6 +32,6 @@
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
-    "test": "cross-env NODE_ENV=test SECRET_KEY=Aloha jest"
+    "test": "cross-env NODE_ENV=test jest"
   }
 }
